--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
       <p>AGENDAR</p>
     </div>
     <div class="menu-item" (click)="navigateTo('productos')">
-      <img src="assets/icon/productos.jpg" alt="Productos" />
+      <img src="assets/icon/product1.png" alt="Productos" />
       <p>PRODUCTOS</p>
     </div>
     <div class="menu-item" (click)="navigateTo('quienes-somos')">
